--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -7,13 +7,30 @@ $sizes:(
     "xxl":1400px
 );
 
+// $colors: (
+//     "secondary": #2bd1ba,
+//     "secondary-lighter": #30e8d0,
+//     "secondary-darker": #26b9a5,
+//     "primary": #0b3d4e,
+//     "primary-lighter": #10576e,
+//     "primary-darker": #092e3b,
+//     "light-grey": #f5f5f5,
+//     "mid-grey": #828282,
+//     "dark-grey": #424242,
+//     "black": #212121,
+//     "white": #ffffff,
+//     "success": #0f9c30,
+//     "error": #FF3D3D,
+//     "warning": #ffb300
+// );
+
 $colors: (
-    "secondary": #2bd1ba,
-    "secondary-lighter": #30e8d0,
-    "secondary-darker": #26b9a5,
-    "primary": #0b3d4e,
-    "primary-lighter": #10576e,
-    "primary-darker": #092e3b,
+    "secondary": #cdc5b7,
+    "secondary-lighter": #ded5c7,
+    "secondary-darker": #b0a99c,
+    "primary": #363a4c,
+    "primary-lighter": #474c63,
+    "primary-darker": #262a3c,
     "light-grey": #f5f5f5,
     "mid-grey": #828282,
     "dark-grey": #424242,
