--- a/frontend/src/styles/nav.scss
+++ b/frontend/src/styles/nav.scss
@@ -50,7 +50,7 @@ nav {
         z-index:500;
         width: 100%!important;
         top:0;
-        // display:none;
+        display:none;
 
         ul {
             display:block!important;
@@ -82,6 +82,10 @@ header {
     background-attachment: fixed;
     background-position: center;
     position: relative;
+
+    @media screen and (max-width:map-get($sizes, "lg")) {
+        height: 300px;
+    }
 }
 
 .title-holder {
